Add all recipes

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 <body>
 
 <h1>Odin Recipes</h1>
-    <a href="recipes/silly-con-carne.html">Silly Con Carne</a>
-    
-
+<img src="images/kitchen.jpg">
+   <ul>
+        <li><a href="recipes/stargazy-pie.html">Stargazy Pie</a></li>
+        <li><a href="recipes/pasty.html">Cornish Pasty</a></li>
+        <li><a href="recipes/saffron-bun.html">Saffron Bun</a></li>
+    </ul>
 </body>
 
 </html>
