elements centered, background colour

--- a/recipes/pasty.html
+++ b/recipes/pasty.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Cornish Pasty</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
-    <h1>Cornish Pasty</h1>
-    <img src="../images/pasty.jpg">
-    <h2>What is a Cornish Pasty?</h2>
-    <p>A pasty is a British baked pastry, a traditional variety 
+    <div class="hyper"><a href="../index.html">Home</a></div>
+    <h1 id="header">Cornish Pasty</h1>
+    <div class="pasty"><img src="../images/pasty.jpg"></div>
+    <h2 class="whatis">What is a Cornish Pasty?</h2>
+    <p class="about">A pasty is a British baked pastry, a traditional variety 
         of which is particularly associated with Cornwall, South 
         West England, but has spread all over the British Isles.
         It is made by placing an uncooked filling, typically meat 
@@ -20,9 +21,9 @@
         a semicircle and crimping the curved edge to form a seal 
         before baking.</p>
 
-     <h3>Ingredients:</h3>
-     <h4>For shortcrust pastry</h4>
-     <ul>
+     <h3 class="ingredients">Ingredients:</h3>
+     <h4 class="forthe">For the shortcrust pastry</h4>
+     <ul class="list">
         <li>500g strong bread flour</li>
         <li>120g lard</li>
         <li>125g Cornish butter</li>
@@ -30,8 +31,8 @@
         <li>175ml cold water</li>
      </ul>   
 
-     <h4>For the filling</h4>
-     <ul>
+     <h4 class="forthe">For the filling</h4>
+     <ul class="list">
         <li>400g beef skirt, cubed</li>
         <li>300g potato, peeled and diced</li>
         <li>150g swede/turnip, peeled and diced</li>
@@ -40,8 +41,8 @@
         <li>Beaten egg or milk to glaze</li>
      </ul>
 
-     <h3>Method</h3>
-     <or>
+     <h3 class="method">Method</h3>
+     <ol class="list">
         <li>Add the salt to the flour in a large mixing bowl.</li>
         <li>Rub the two types of fat lightly into flour until it 
             resembles breadcrumbs.</li>
@@ -62,10 +63,11 @@
         <li>Bring the pastry around and crimp the edges together</li>
         <li>Glaze with beaten egg or an egg and milk mixture.</li>
         <li>Bake at 165 degrees C (fan oven) for about 50 to 55 minutes until golden.</li>
-     </or>
+     </ol>
+     
 
         <p>
-            <a href="../recipes/stargazy-pie.html">Back</a> <a href="../recipes/saffron-bun.html">Next</a>
+            <div class="hyper"><a href="../recipes/stargazy-pie.html">Back</a> <a href="../recipes/saffron-bun.html">Next</a></div>
         </p>
 
 
