--- a/recipes/saffron-bun.html
+++ b/recipes/saffron-bun.html
@@ -3,23 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <title>Saffron Bun</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
-        <a href="../index.html">Home</a>
-        <h1>Saffron Buns</h1>
-        <img src="../images/saffron-bun.jpg">
+        <div class="hyper"><a href="../index.html">Home</a></div>
+        <h1 id="header">Saffron Buns</h1>
+        <div class="buns"><img src="../images/saffron-bun.jpg"></div>
 
-        <h2>What is a saffron bun?</h2>
-        <p>A saffron bun, Cornish tea treat bun or revel bun, is a rich, 
+        <h2 class="whatis">What is a saffron bun?</h2>
+        <p class="about">A saffron bun, Cornish tea treat bun or revel bun, is a rich, 
             spiced yeast-leavened sweet bun that is flavoured with saffron and 
             contains dried fruit including currants and raisins similar to a teacake. 
             The main ingredients are plain flour, butter, yeast, caster sugar, currants 
             and sultanas.[1] Larger versions baked in a loaf tin are known as saffron 
             cake.</p>
 
-        <h3>Ingredients</h3>
-            <ul>
+        <h3 class="ingredients">Ingredients</h3>
+            <ul class="list">
                 <li>0.4g jar saffron</li>
                 <li>250ml whole milk</li>
                 <li>90g clotted cream, plus extra to serve</li>
@@ -32,7 +33,9 @@
                 <li>100g currents</li>
             </ul>
 
-            <or>
+        
+        <h3 class="method">Method</h3>    
+            <ol class="list">
                 <li>Preheat the oven to 120°C, fan 100°C, gas 1/2. 
                     Scatter the saffron strands on a baking sheet and place in the oven 
                     for 15-20 minutes to dry out and darken in colour. Crush the strands 
@@ -57,10 +60,10 @@
                     dissolved then boil for 1 minute before brushing over the warm buns. Transfer to a 
                     wire rack and leave to cool.</li>
                 <li>Slice in half and enjoy the buns fresh or toasted, spread with clotted cream or butter.</li>
-            </or>
+            </ol>
 
             <p>
-                <a href="../recipes/pasty.html">Back</a>
+                <div class="hyper"><a href="../recipes/pasty.html">Back</a></div>
             </p>
 
     </body>
