--- a/recipes/stargazy-pie.html
+++ b/recipes/stargazy-pie.html
@@ -4,17 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Stargazy Pie.</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
-    <h1>Stargazy Pie</h1>
+    <div class="hyper"><a href="../index.html">Home</a></div>
+    <h1 id="header">Stargazy Pie</h1>
 
-    <img src="../images/fish-pie.jpg">
+    <div class="fishpie"><img src="../images/fish-pie.jpg"></div>
 
-    <h2>What is Stargazy Pie?</h2>
+    <h2 class="whatis">What is Stargazy Pie?</h2>
 
-    <p>Stargazy pie (sometimes called starrey gazey pie, 
+    <p class="about">Stargazy pie (sometimes called starrey gazey pie, 
         stargazey pie and other variants) is a Cornish 
         dish made of baked pilchards (sardines), along 
         with eggs and potatoes, covered with a pastry crust. 
@@ -23,9 +24,9 @@
         fish heads (and sometimes tails) protruding through the 
         crust, so that they appear to be gazing to the stars.</p>
 
-        <h3>Ingredients:</h3>
+        <h3 class="ingredients">Ingredients:</h3>
         <p>
-            <ul>
+            <ul class="list">
                 <li>30g butter</li>
                 <li>1 onion</li>
                 <li>1 leek</li>
@@ -43,9 +44,9 @@
             </ul>
         </p>
 
-        <h3>Method:</h3>
+        <h3 class="method">Method:</h3>
         <p>
-            <ol>
+            <ol class="list">
                 <li>Preheat the oven to 200C/180C Fan/Gas 6.</li>
                 <li>Melt the butter in a pan over a low heat, add 
                     the onion, leek and bacon and cook over a low 
@@ -75,7 +76,7 @@
         </p>
 
         <p>
-            <a href="../index.html">Back</a> <a href="../recipes/pasty.html">Next</a>
+            <div class="hyper"><a href="../index.html">Back</a> <a href="../recipes/pasty.html">Next</a></div>
         </p>
     </body>
 </html>
