--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
-<h1>Odin Recipes</h1>
-<img src="images/kitchen.jpg">
-   <ul>
+<h1 id="header">Odin Recipes</h1> 
+<div class="kitchen"><img src="images/kitchen.jpg"></div>
+    <ul class="list">
         <li><a href="recipes/stargazy-pie.html">Stargazy Pie</a></li>
         <li><a href="recipes/pasty.html">Cornish Pasty</a></li>
         <li><a href="recipes/saffron-bun.html">Saffron Bun</a></li>
